Fixed spacing on heading title of publisher and featured snap

--- a/static/sass/_patterns_featured-snap.scss
+++ b/static/sass/_patterns_featured-snap.scss
@@ -3,7 +3,7 @@
     @extend %vf-card;
     background-color: $color-dark;
     color: $color-light;
-    margin-bottom: 0;
+    margin-bottom: $sp-large;
 
     // force color on visited links as well
     a,
